HZ 0441 debug AwsClient deprecated and Mutlipart file convert