@@ -18,9 +18,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 
-
-import static java.util.stream.Collectors.toList;
-
 @Service
 @RequiredArgsConstructor
 public class ImageService {
@@ -30,7 +27,7 @@ public class ImageService {
     private final ImageMapper imageMapper;
 
     public List<ImageGetDto> addMultipleImage(List<ImagePostDto> imagePostDtos,long agentId, long propertyId){
-        return imagePostDtos.stream().map(e->addImage(e,agentId, propertyId)).collect(toList());
+        return imagePostDtos.stream().map(e->addImage(e,agentId, propertyId)).toList();
     }
     public ImageGetDto addImage(ImagePostDto imagePostDto, long agentId, long propertyId) {
         Agent agent = agentRepository.findById(agentId).orElseThrow(() -> new ResourceNotFoundException("Agent", agentId));
@@ -50,7 +47,7 @@ public class ImageService {
         Page<Image> properties = imageRepository.findByPropertyId(id, paging);
         return properties.getContent().stream()
                 .map(imageMapper::imageToImageGetDto)
-                .collect(toList());
+                .toList();
 
     }
 }
